adding arabic to header and headertop

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -38,5 +38,14 @@
     "introSuffix": " نؤمن بأن الجميع يستحق فرصة امتلاك عقار والاستثمار فيه بثقة في دبي.",
     "portfolio": "نرافق عملاءنا في جميع مراحل تملّك العقار، من المشاريع قيد الإنشاء إلى الوحدات الفاخرة الجاهزة، ونساعدهم على بناء محافظ عقارية متنوعة ومدروسة استراتيجياً تحقق عوائد مستقرة ومستدامة.",
     "expertise": "بفضل خبرتنا العميقة في السوق، وآليات العمل الشفافة، والتحليلات المبنية على البيانات، نمكّن المستثمرين من اتخاذ قرارات مدروسة وتحقيق نمو أمثل في سوق العقارات الديناميكي في دبي."
+  },
+  "video": {
+    "playVideo": "شاهد الفيديو",
+    "duration": "المدة",
+    "views": "المشاهدات",
+    "videoTitle": "فيديو استراتيجية الاستثمار",
+    "videoDescription": "رؤى حصرية حول الاستثمار في المشاريع قيد الإنشاء وإدارة المحافظ",
+    "close": "إغلاق",
+    "minutes": "دقيقة"
   }
 }
