to be cont tomorrow topheader

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -14,45 +14,37 @@
     "contactUs": "اتصل بنا",
     "directLine": "الخط المباشر"
   },
-
   "categories": {
     "apartments": "شقق",
     "villas": "فلل",
     "commercial": "تجاري / بيع بالتجزئة",
     "penthouses": "بنتهاوس"
   },
-
   "descriptions": {
     "apartments": "شقق فاخرة في أكثر مناطق دبي طلباً",
     "villas": "مشاريع فلل حصرية ومجتمعات سكنية على الواجهة المائية",
     "commercial": "مشاريع تجارية ومتعددة الاستخدامات ذات عائد استثماري مرتفع",
     "penthouses": "بنتهاوس فاخرة بإطلالات بانورامية",
-    "developerIn": "المطورون في فئة {category}",
-    "projectsBy": "المشاريع من قبل {developer}",
+    "developerIn": "في فئة {category}",
+    "projectsBy": "من قبل {developer}",
     "premiumDeveloper": "مطور متميز في فئة {category}",
     "discoverPortfolio": "اكتشف مجموعتنا المميزة من العقارات"
   },
-
-  "Header": {
-    "title": "محمد قضماني",
-    "subtitle": "مستشار عقاري وخبير استثمار في دبي",
-    "introPrefix": "في ",
-    "companyName": "شركة محمد قضماني للوساطة العقارية",
-    "introSuffix": " نؤمن بأن الجميع يستحق فرصة امتلاك عقار والاستثمار فيه بثقة في دبي.",
-    "portfolio": "نرافق عملاءنا في جميع مراحل تملك العقار؛ من المشاريع قيد الإنشاء إلى الوحدات الفاخرة الجاهزة، ونساعدهم على بناء محافظ عقارية متنوعة ومدروسة استراتيجياً تحقق عوائد مستقرة ومستدامة.",
-    "expertise": "بفضل خبرتنا العميقة في السوق، وآليات العمل الشفافة، والتحليلات المبنية على البيانات، نمكّن المستثمرين من اتخاذ قرارات مدروسة وتحقيق نمو أمثل في سوق العقارات الديناميكي في دبي."
+  "developers": {
+    "sobhaRealty": "شوبا العقارية",
+    "nakheel": "نخيل",
+    "arada": "عرادة",
+    "omniyat": "أومنيات",
+    "aziziDevelopments": "عزيزي للتطوير العقاري"
   },
-
-  "video": {
-    "playVideo": "شاهد الفيديو",
-    "duration": "المدة",
-    "views": "المشاهدات",
-    "videoTitle": "فيديو استراتيجية الاستثمار",
-    "videoDescription": "رؤى حصرية حول الاستثمار في المشاريع قيد الإنشاء وإدارة المحافظ العقارية",
-    "close": "إغلاق",
-    "minutes": "دقيقة"
+  "projects": {
+    "sobhaCentral": "شوبا سنترال",
+    "sobhaAquamont": "شوبا أكوامونت",
+    "sobhaAlSinniyyahIsland": "شوبا جزيرة السنية",
+    "luminaAlta": "لومينا ألتا",
+    "palmCentralNakheel": "بالم سنترال - نخيل",
+    "aradaMassar3": "عرادة - مسار 3"
   },
-
   "brands": {
     "sobhaRealty": "شوبا العقارية",
     "aziziDevelopments": "عزيزي للتطوير العقاري",
@@ -62,7 +54,24 @@
     "aziziRivieraRetails": "محلات عزيزي ريفييرا التجارية",
     "sobhaSeaHavenPenthouse": "بنتهاوس شوبا سي هافن"
   },
-
+  "Header": {
+    "title": "محمد قضماني",
+    "subtitle": "مستشار عقاري وخبير استثمار في دبي",
+    "introPrefix": "في ",
+    "companyName": "شركة محمد قضماني للوساطة العقارية",
+    "introSuffix": " نؤمن بأن الجميع يستحق فرصة امتلاك عقار والاستثمار فيه بثقة في دبي.",
+    "portfolio": "نرافق عملاءنا في جميع مراحل تملك العقار؛ من المشاريع قيد الإنشاء إلى الوحدات الفاخرة الجاهزة، ونساعدهم على بناء محافظ عقارية متنوعة ومدروسة استراتيجياً تحقق عوائد مستقرة ومستدامة.",
+    "expertise": "بفضل خبرتنا العميقة في السوق، وآليات العمل الشفافة، والتحليلات المبنية على البيانات، نمكّن المستثمرين من اتخاذ قرارات مدروسة وتحقيق نمو أمثل في سوق العقارات الديناميكي في دبي."
+  },
+  "video": {
+    "playVideo": "شاهد الفيديو",
+    "duration": "المدة",
+    "views": "المشاهدات",
+    "videoTitle": "فيديو استراتيجية الاستثمار",
+    "videoDescription": "رؤى حصرية حول الاستثمار في المشاريع قيد الإنشاء وإدارة المحافظ العقارية",
+    "close": "إغلاق",
+    "minutes": "دقيقة"
+  },
   "callback": {
     "sectionTitleLine1": "ابدأ",
     "sectionTitleAccent": "رحلتك الاستثمارية في دبي",
@@ -83,7 +92,6 @@
     "errorNetwork": "خطأ في الاتصال بالشبكة، يرجى المحاولة مجدداً أو التواصل معنا مباشرة.",
     "bottomDecoration": "شركة محمد قضماني للوساطة العقارية"
   },
-
   "offPlan": {
     "sectionTitle": "الاستثمار في العقارات قيد الإنشاء في دبي",
     "sectionDescriptionMain": "احجز عقارك في المراحل الأولى قبل بدء البناء، مع خطط سداد مرنة وإمكانات قوية لنمو رأس المال على المدى المتوسط والبعيد.",
@@ -113,7 +121,6 @@
     "timelineStep4Title": "التسليم والعوائد",
     "timelineStep4Desc": "استلام العقار وتأجيره أو إعادة بيعه بحسب هدفك الاستثماري."
   },
-
   "portfolio": {
     "headerTitle": "محفظة عقارية استراتيجية",
     "headerTagline": "ابنِ محفظة عقارية متوازنة تجمع بين العقارات الجاهزة والمشاريع قيد الإنشاء، بهدف تعظيم العوائد ونمو رأس المال والاستقرار طويل الأمد.",
@@ -142,7 +149,6 @@
     "managementStatement": "نقوم بإدارة جميع تفاصيل محفظتك العقارية — من التسليم وحتى إعادة البيع —",
     "managementHighlight": "لتستمر ثروتك بالنمو بشكل آمن ودون مجهود، مدعومة بقوة سوق العقارات في دبي."
   },
-
   "capitalGrowth": {
     "heroBadge": "تحليلات السوق 2024",
     "heroTitle": "نمو رأسمالي استثنائي في فلل دبي",
@@ -178,7 +184,6 @@
     "communitiesTitle": "مجتمعات الفلل المميزة في دبي",
     "communitiesDesc": "تجمعات سكنية حصرية توفر أسلوب حياة فاخر وفرصاً استثمارية قوية في مواقع استراتيجية داخل دبي."
   },
-
   "dubaiDemand": {
     "badge": "تحليل السوق",
     "title": "طلب مستمر على عقارات دبي",
@@ -207,7 +212,6 @@
     "chartDemandGrowth": "نمو قوي في الطلب",
     "chartSupplyGrowth": "نمو في المعروض"
   },
-
   "dubaiEconomy": {
     "sectionTitle": "نمو اقتصادي يدعم سوق عقارات دبي",
     "descriptionMain": "اقتصاد دبي لا ينمو فحسب، بل يغذي واحداً من أقوى أسواق العقار في العالم.",
@@ -233,7 +237,6 @@
     "economyBarLabel": "نمو الاقتصاد",
     "realEstateBarLabel": "نمو سوق العقار"
   },
-
   "services": {
     "headerTitle": "إدارة عقارية متكاملة 360°",
     "headerTagline": "من الشراء وحتى تحقيق الأرباح — إدارة شاملة لعقارك تضمن رحلة استثمارية سهلة ومربحة وآمنة في دبي.",
