--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -33,7 +33,7 @@
   "developers": {
     "sobhaRealty": "شوبا العقارية",
     "nakheel": "نخيل",
-    "arada": "عرادة",
+    "arada": "أرادَ",
     "omniyat": "أومنيات",
     "aziziDevelopments": "عزيزي للتطوير العقاري"
   },
@@ -46,7 +46,7 @@
     "sobhaHartland2Villas": "فلل شوبا هارتلاند 2",
     "sobhaSeaHavenPenthouse": "بنتهاوس شوبا سي هافن",
     "palmCentralNakheel": "بالم سنترال - نخيل",
-    "aradaMassar3": "عرادة - مسار 3",
+    "aradaMassar3": "مسار 3",
     "luminaAlta": "لومينا ألتا",
     "aziziRivieraRetails": "محلات عزيزي ريفييرا التجارية"
   },
