--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -46,8 +46,8 @@
     "sobhaHartland2Villas": "Sobha Hartland 2 Villas",
     "sobhaSeaHavenPenthouse": "Sobha SeaHaven Penthouse",
     "palmCentralNakheel": "Palm Central – Nakheel",
-    "aradaMassar3": "Arada – Massar 3",
-    "luminaAlta": "Lumina Alta",
+    "aradaMassar3": "Massar 3",
+    "luminaAlta": "Lumena Alta",
     "aziziRivieraRetails": "Azizi Riviera – Retails"
   },
   "Header": {
